--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,22 @@
-albumentations==1.1.0
+--extra-index-url https://download.pytorch.org/whl/cu116/
+
 click==8.0.4
-coremltools==5.2.0
-fastapi==0.75.1
+fastapi==0.100.0
 filetype==1.0.10
-Flask==2.0.3
 funcy==1.17
 image_bbox_slicer==0.4
-ipython==8.2.0
 joblib==1.1.0
 lxml==4.8.0
 matplotlib==3.3.4
-mmcv==1.4.8
-mmcv_full==1.4.8
-numpy==1.20.1
-onnx==1.11.0
-onnxruntime==1.11.0
-opencv_python==4.5.5.64
-openvino==2022.1.0
-pafy==0.5.5
-pandas==1.2.1
-Pillow==9.1.0
-protobuf==3.20.0
-psutil==5.9.0
-pycocotools==2.0.4
+numpy==1.21.6
+opencv_python_headless==4.7.0.68
+Pillow==10.0.0
+pycocotools==2.0.6
 pycocotools_windows==2.0.0.2
-pydantic==1.9.0
+pydantic==1.10.2
 PyYAML==6.0
-requests==2.27.1
-sahi==0.9.1
-scikit_learn==1.0.2
-scipy==1.7.3
-seaborn==0.11.2
-setuptools==58.0.4
-tensorflow==2.8.0
-tensorflowjs==3.15.0
-tensorrt==0.0.1
-tflite_runtime==2.8.0
-thop==0.0.31.post2005241907
-torch==1.8.0
-torchvision==0.9.0
-tqdm==4.63.0
+sahi==0.11.14
+scikit_learn==1.3.0
+torch==1.12.1+cu116
+torchvision==0.13.1+cu116
+tqdm==4.64.1
